# home-digital-twin

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/home-twin/: Cargo.toml
crates/home-twin/src/: lib.rs
web/: index.html
web/src/: app.js  styles.css
